# AsczEngineRT-v0

./: .cfg  .gitignore  .model  AsczEngine copy.cu  AsczEngine.cu  AsczEngine.exp  AsczEngine.lib  CMakeLists.txt  Makefile  ReadMe.md  ignore.py  lmao.py  main.cu  previous.azb  raytracer.exp  raytracer.lib  testSAH.js
.backup/: AmazingRaytrace.cu  AsczEngine.cu  AsczEngineRTinHTML.html  AsczEngine_25-01-24.cu  IterativeSuccess.cu  RayTrace_25-01-24.cu  Weight.cu  shadowMultiplier.py
.backup/Test/: test.mtl
.test/: BVH.cpp
assets/: mtltemplate.mtl
assets/Models/Aband/: Light.mtl
assets/Models/Backroom/: Backroom.mtl
assets/Models/BlueArchive/Arisu/: Arisu.mtl
assets/Models/BlueArchive/CherinoR8/: CherinoR8.mtl
assets/Models/BlueArchive/Shiroko/: Shiroko.mtl
assets/Models/BlueArchive/Yuuka/: Yuuka.mtl
assets/Models/Casa/: Casa.mtl
assets/Models/Character/Foxy/: Foxy.mtl
assets/Models/Character/Paimon/: Paimon.mtl
assets/Models/Character/Shiroko/: Shiroko.mtl
assets/Models/Character/Sukuna/: Sukuna.mtl
assets/Models/City/: Building.mtl  City.mtl
assets/Models/Cornell/: Cornell.azb  Cornell.azm  Cornell.mtl
assets/Models/Genshin/Navia/: Navia.mtl
assets/Models/Genshin/Paimon/: Paimon.mtl
assets/Models/Light/: Light.cfg  Light.mtl
assets/Models/Shapes/Ceiling/: Ceiling.mtl
assets/Models/Shapes/Cornell/: Cornell.mtl  cornell-box.mtl
assets/Models/Shapes/Cube/: Cube1.mtl  Cube2.mtl
assets/Models/Shapes/Floor/: Floor.mtl
assets/Models/Shapes/Sphere/: Sphere.mtl  lmao.py
assets/Models/Shapes/Test/: test.mtl
assets/Models/Skybox/: Sphere.mtl
assets/Models/Skybox/Dream/: Skybox.mtl
assets/Models/Skybox/Sea/: Skybox.mtl
assets/Models/Skybox/Sun/: Sun.mtl
assets/Models/Stanford/: Bunny.azm
assets/Models/Structure/Aband/: Aband.mtl
assets/Models/Structure/Backroom1/: Backroom.mtl
assets/Models/Structure/Bedroom/: Bedroom.mtl  Light.mtl
assets/Models/Structure/Bedroom2/: Additional.mtl  Bedroom.mtl  Light.mtl
assets/Models/Structure/Building4/: building_04.mtl
assets/Models/Structure/Buildings/: Building.mtl  Building001.azb  Light.mtl
assets/Models/Structure/City/: City.mtl  city.mtl
assets/Models/Structure/CornellBox/: CornellBox.azm
assets/Models/Structure/Fnaf/: Fnaf1.mtl
assets/Models/Structure/Gaming/: Gaming.mtl
assets/Models/Structure/Garden/: Garden.mtl
assets/Models/Structure/Interior/: Interior.mtl
assets/Models/Structure/Island/: Island.mtl
assets/Models/Weapon/: AK47.mtl  Awp.mtl
assets/Models/de_dust2/: Light.mtl
assets/Models/de_dust2_a/: Light.mtl  dust2_a.mtl
assets/cfg/: cameraPos.txt  cameraSpd.txt  cameraView.txt  lightColor.txt  models.txt  resolution.txt  shadow.txt  transform.txt
include/.WIP/: MatAttrs.cuh
include/Ascz3D/: AsczBvh.cuh  AsczCam.cuh  AsczFrame.cuh  AsczMat.cuh  AsczMesh.cuh  AsczMtl.cuh  AsczTxtr.cuh  AsczWin.cuh  AzStruct.cuh  Camera.cuh  FXAA.cuh  Geom.cuh  Ray.cuh  RayTrace.cuh
include/Ascz3Dx/: AsczBvh.cuh  AsczCam.cuh  AsczLight.cuh  AsczMat.cuh  AsczMesh.cuh  AsczMtl.cuh  AsczTxtr.cuh  AsczWin.cuh  ReadMe.md
include/AsczLib/: Vector.cuh
include/AsczMath/: AzDevMath.cuh  AzMath.cuh  Geom.cuh  Matrix.cuh  Vector.cuh
include/AsczRT/: PTpseudo.txt  PathTrace.cuh  PathTraceNEE.cuh  PathTraceSTD.cuh  RTpseudo.txt  RayCast.cuh  RayTrace.cuh
include/AsczSys/: ToDevice.cuh  Utility.cuh
include/AsczSystem/: FpsHandler.cuh
include/BVH/: BVHNode.cuh  StackBVH.cuh  StacklessBVH.cuh
include/Geometry/: BVHnode.cuh  Geom.cuh  HitManager.cuh  InterpManager.cuh  Plane.cuh  Sphere.cuh  Triangle.cuh
include/Graphic3D/: Camera.cuh  FXAA.cuh  Ray.cuh  RayTrace.cuh  RayTracing.cuh  SFMLTexture.cuh  TextureManager.cuh
include/Manager/: AsczBvh.cuh  AsczLight.cuh  AsczMat.cuh  AsczMesh.cuh  AsczTxtr.cuh  BvhManager.cuh  LightManager.cuh  MatManager.cuh  MeshManager.cuh  TxtrManager.cuh
include/Material/: MatAttrs.cuh  MatFlags.cuh  MatManager.cuh  MatRtxFlags.cuh  Material.cuh  ReadMe.md  TxtrManager.cuh
include/MathLib/: Matrix.cuh  Vector.cuh
include/System/: CsLogHandler.cuh  Utility.cuh
src/.WIP/: MatAttrs.cu
src/Ascz3D/: AsczBvh copy.cu  AsczBvh.cu  AsczCam.cu  AsczFrame.cu  AsczMat.cu  AsczMesh.cu  AsczTxtr.cu  AsczWin.cu  AzStruct.cu  Camera.cu  Ray.cu  RayTrace.cu  pseudo.txt
src/Ascz3Dx/: AsczBvh.cu  AsczCam.cu  AsczLight.cu  AsczMat.cu  AsczMesh.cu  AsczMtl.cu  AsczTxtr.cu  AsczWin.cu
src/AsczLib/: Vector.cu
src/AsczMath/: Geom.cu  Vector.cu
src/AsczRT/: PT_NEE.txt  PT_Standard.txt  PathTrace.cu  PathTraceNEE.cu  PathTraceSTD.cu  PathTrace_MIS.cu  PathTrace_backup.cu  PathTrace_std.cu  RayCast.cu  RayTrace.cu  _NEE.cu  _STD.cu  snippet.txt
src/AsczSys/: FpsHandler.cu  Utility copy.cu  Utility.cu
src/Graphic3D/: Camera.cu  Ray.cu  RayTrace.cu  SFMLTexture.cu
src/Manager/: AsczBvh.cu  AsczMesh.cu  BvhManager.cu  MatManager.cu  MeshManager.cu  TxtrManager.cu
src/Material/: MatAttrs.cu  MatFlags.cu  MatManager.cu  MatRtxFlags.cu  Material.cu  TxtrManager.cu
src/MathLib/: Matrix.cu  Vector.cu
src/System/: CsLogHandler.cu  Utility.cu
(+36 files in other folders)
